Add AJEApps artifact source visibility
